z-depth not rendering properly at (n*256)+1 dimensions. #36700

Closed
opened 2013-09-11 06:15:26 +02:00 by Samuel Nicholas · 6 comments

%%%--- Operating System, Graphics card ---
Linux Mint 14 Nadia
Mesa DRI Intel(R) Q45/43

- Blender version with error, and version that worked ---

2.68a r59916 from ppa:irie/blender

- Short description of error ---

problem with z-depth when rendered at regular intervals 256 plus one pixel, eg 267x267 513x513 769x769 etc

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

load example blend, render, change resolution to 256x256 see difference in render. change resolutions around to see how it coincides with the values above.
%%%

%%%--- Operating System, Graphics card --- Linux Mint 14 Nadia Mesa DRI Intel(R) Q45/43 - Blender version with error, and version that worked --- 2.68a r59916 from ppa:irie/blender - Short description of error --- problem with z-depth when rendered at regular intervals 256 plus one pixel, eg 267x267 513x513 769x769 etc - Steps for others to reproduce the error (preferably based on attached .blend file) --- load example blend, render, change resolution to 256x256 see difference in render. change resolutions around to see how it coincides with the values above. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%The z buffer that comes out of the render engine does not have this problem, and it happens for both cycles and blender internal. It seems that this bug is somewhere in compositing.%%%

%%%The z buffer that comes out of the render engine does not have this problem, and it happens for both cycles and blender internal. It seems that this bug is somewhere in compositing.%%%
Member

%%%Yes, i got that far. The normalize operation uses a min value of 0.0 in the broken case (correct is something like 3.xx - 6.xx), which leads to wrong normalization. This might be another interpolation issue, have to investigate.%%%

%%%Yes, i got that far. The normalize operation uses a min value of 0.0 in the broken case (correct is something like 3.xx - 6.xx), which leads to wrong normalization. This might be another interpolation issue, have to investigate.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%you guys are the best!! seriously thank you! :D%%%

%%%you guys are the best!! seriously thank you! :D%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36700
No description provided.